--- a/2. ToDo List/src/pages/TodoPage.module.scss
+++ b/2. ToDo List/src/pages/TodoPage.module.scss
@@ -6,38 +6,10 @@
     margin-top: 30px;
     padding: 20px;
     border-radius: 4px;
-}
 
-.inputContainer {
-    display: flex;
-    gap: 10px;
-
-    input {
-        border: 1px solid teal;
-        padding: 5px;
-        width: 100%;
-        border-radius: 4px;
-        color: teal;
-
-        &:focus {
-            outline: 1.5px solid teal;
-        }
-    }
-
-    button {
-        padding: 5px 8px;
-        border: 0;
-        background-color: teal;
-        color: white;
-        border-radius: 4px;
-        cursor: pointer;
-        transition: all 0.3s ease-out;
-
-        &:hover {
-            background-color: white;
-            color: teal;
-            outline: 1px solid teal;
-        }
+    .title {
+        color: rgb(0, 60, 60);
+        margin-bottom: 20px;
     }
 }
 
