--- a/marketplace/src/components/marketplace-navbar/MarketplaceNavbar.module.css
+++ b/marketplace/src/components/marketplace-navbar/MarketplaceNavbar.module.css
@@ -24,4 +24,21 @@
             height: 100%;
         }
     }
+
+    .profileIcon {
+        display: flex;
+        width: 20px;
+        height: 20px;
+        cursor: pointer;
+        transition: all 0.2s ease-out;
+
+        &:hover {
+            transform: scale(1.05);
+        }
+
+        svg {
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
