Auto login, Guards, Zustand

--- a/social-media/src/module/auth/ui/auth.module.scss
+++ b/social-media/src/module/auth/ui/auth.module.scss
@@ -10,3 +10,15 @@
         align-self: center;
     }
 }
+
+.qrCodeContainer {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+
+    img {
+        width: 100%;
+    }
+}
